test/files/errors/readFileIV.jg
_main int ()
{
    0 readFile; # Error: Evaluator was unable to execute the code (IST->Stack), reason: Not a string
    0 return;
}